# obliv-cli

./: Makefile.am  configure.ac  libpq.pc
src/: Makefile.am  inserts_obl.sql  main  main.c
